# development_of_information_security_tools_lab_2

./: .gitignore  CMakeLists.txt  README.md  benchmarks.h  main.cpp  tests.h
.github/workflows/: analysis.yml
BBV/: BBV.h  CMakeLists.txt
BBV/src/: BBV.cpp
SAT_DPLL/: CMakeLists.txt  NodeBoolTree.h  main.cpp
SAT_DPLL/SatExamples/: Sat_ex10_1.pla  Sat_ex13_2.pla  Sat_ex19_1.pla  Sat_ex25_1.pla  Sat_ex25_2.pla  Sat_ex25_3.pla  Sat_ex26_1.pla  Sat_ex26_2.pla  Sat_ex27_1.pla  sat_ex_4.pla
SAT_DPLL/src/: nodebooltree.cpp
SatExamples/: Sat_ex10_2.pla  Sat_ex10_3.pla  Sat_ex11_1.pla  Sat_ex11_2.pla  Sat_ex12_1.pla  Sat_ex12_2.pla  Sat_ex13_1.pla  Sat_ex14_1.pla  Sat_ex14_2.pla  Sat_ex15_1.pla  Sat_ex15_2.pla  Sat_ex15_3.pla  Sat_ex16_1.pla  Sat_ex16_2.pla  Sat_ex16_3.pla  Sat_ex17_1.pla  Sat_ex17_2.pla  Sat_ex17_3.pla  Sat_ex18_1.pla  Sat_ex18_2.pla  Sat_ex18_3.pla  Sat_ex19_2.pla  Sat_ex19_3.pla  Sat_ex20_1.pla  Sat_ex20_2.pla  Sat_ex20_3.pla  Sat_ex21_1.pla  Sat_ex21_2.pla  Sat_ex21_3.pla  Sat_ex22_1.pla  Sat_ex22_2.pla  Sat_ex22_3.pla  Sat_ex23_1.pla  Sat_ex23_2.pla  Sat_ex23_3.pla  Sat_ex24_1.pla  Sat_ex24_2.pla  Sat_ex24_3.pla  Sat_ex26_3.pla  Sat_ex27_2.pla  (+14 more)
bool_equation/: CMakeLists.txt  boolequation.h  branching_strategy.h  branching_strategy_factory.h  first_free_column_branching_strategy.h  min_dont_care_branching_strategy.h
bool_equation/src/: boolequation.cpp  branching_strategy_factory.cpp  first_free_column_branching_strategy.cpp  min_dont_care_branching_strategy.cpp
bool_interval/: CMakeLists.txt  boolinterval.h
bool_interval/src/: boolinterval.cpp
scan_reports/: VALGRIND_REPORT.md  pvs_report.json  Отчет по ошибкам Артеменко 932223_073a74ec5a34d9c0b258629b80a92fd2.docx
scan_reports/pvs/: pvs_report.json
scan_reports/valgrind/: Sat_ex10_1_first-free.xml  Sat_ex10_1_min-dont-care.xml  Sat_ex10_2_first-free.xml  Sat_ex10_2_min-dont-care.xml  Sat_ex10_3_first-free.xml  Sat_ex10_3_min-dont-care.xml  Sat_ex11_1_first-free.xml  Sat_ex11_1_min-dont-care.xml  Sat_ex11_2_first-free.xml  Sat_ex11_2_min-dont-care.xml  Sat_ex11_3_first-free.xml  Sat_ex11_3_min-dont-care.xml  Sat_ex12_1_first-free.xml  Sat_ex12_1_min-dont-care.xml  Sat_ex12_2_first-free.xml  Sat_ex12_2_min-dont-care.xml  Sat_ex12_3_first-free.xml  Sat_ex12_3_min-dont-care.xml  Sat_ex13_1_first-free.xml  Sat_ex13_1_min-dont-care.xml  Sat_ex13_2_first-free.xml  Sat_ex13_2_min-dont-care.xml  Sat_ex13_3_first-free.xml  Sat_ex13_3_min-dont-care.xml  Sat_ex14_1_first-free.xml  Sat_ex14_1_min-dont-care.xml  Sat_ex14_2_first-free.xml  Sat_ex14_2_min-dont-care.xml  Sat_ex14_3_first-free.xml  Sat_ex14_3_min-dont-care.xml  Sat_ex15_1_first-free.xml  Sat_ex15_1_min-dont-care.xml  Sat_ex15_2_first-free.xml  Sat_ex15_2_min-dont-care.xml  Sat_ex15_3_first-free.xml  Sat_ex15_3_min-dont-care.xml  Sat_ex16_1_first-free.xml  Sat_ex16_1_min-dont-care.xml  Sat_ex16_2_first-free.xml  Sat_ex16_2_min-dont-care.xml  (+101 more)
tools/: valgrind_xml_to_html.py
